# ParProg_MIPT

./: .gitignore  README.md
Lab_1/: CMakeLists.txt  Task_Lab_1.txt  setup_venv.bat
Lab_1/scripts/: lab1_1.csv  lab1_1.py  lab1_2.csv  lab1_2.py  lab_main.csv  lab_main.py
Lab_1/src/: task1_1.cpp  task1_2.cpp  task1_3_1.cpp  task1_3_2.cpp
Lab_2/: CMakeLists.txt  Task_Lab_2.txt
Lab_2/data/: integral_results.txt  pipe_results.txt  shared_mem_results.txt  sort_results.txt
Lab_2/python/: plot_res.py  plot_sort.py
Lab_2/scripts/: run_exp.sh  run_lab2.py
Lab_2/src/: integral_pthread.cpp  parallel_sort.cpp  pipe_benchmark.cpp  shared_mem_threads_benchmark.cpp
scripts/: run_pi_test.py
